tests/golden/parse_errors/field_assignment_invalid_target.cd
(person.age + 1) = 2;
